--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,5 +9,16 @@
       </div>
     </div>
   </div>
-  <div class="text-center text-secondary py-5"><small>© 2022 TESA FOOTBALL CLUB.</small></div>
+  <div class="text-white bg-dark py-5">
+    <div class="container-sm">
+      <div class="d-flex flex-column justify-content-md-center">
+        <div class="text-secondary">
+          <small>© 2022 Tesa Football Club.</small>
+        </div>
+        <div class="d-flex">
+          <a href="https://instagram.com/tesa.fc?igshid=YmMyMTA2M2Y=" alt="" class=""><i class="fa-brands fa-instagram"></i></a>
+        </div>
+      </div>
+    </div>
+  </div>
 </footer>
