--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,7 @@
   </div>
   <div class="text-white bg-dark py-5">
     <div class="container-sm">
-      <div class="d-flex flex-column justify-content-md-center">
+      <div class="d-inline-flex flex-column justify-content-md-center">
         <div class="text-secondary">
           <small>© 2022 Tesa Football Club.</small>
         </div>
