--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,12 +11,16 @@
   </div>
   <div class="text-white bg-dark py-5">
     <div class="container-sm">
-      <div class="d-inline-flex flex-column justify-content-md-center">
+      <div class="d-flex flex-column justify-content-md-center align-items-md-center">
         <div class="text-secondary">
           <small>© 2022 Tesa Football Club.</small>
         </div>
         <div class="d-flex">
           <a href="https://instagram.com/tesa.fc?igshid=YmMyMTA2M2Y=" alt="" class=""><i class="fa-brands fa-instagram"></i></a>
+          <a href="" alt="" class=""><i class="fa-brands fa-facebook"></i></a>
+          <a href="" alt="" class=""><i class="fa-brands fa-twitter"></i></a>
+          <a href="" alt="" class=""><i class="fa-brands fa-youtube"></i></a>
+          <a href="" alt="" class=""><i class="fa-brands fa-flickr"></i></a>
         </div>
       </div>
     </div>
