--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
       </div>
     </div>
   </div>
-  <div class="text-white bg-dark py-5">
+  <div class="bg-light py-5">
     <div class="container-sm">
       <div class="d-flex flex-column justify-content-md-center align-items-md-center">
         <div class="text-secondary">
