--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="bg-light py-5">
-  <h6 class="text-uppercase text-center fw-bolder mb-0">partners</h6>
+  <h6 class="text-uppercase text-center fw-bolder mb-0">partner</h6>
   <div class="container-sm">
     <div class="d-flex justify-content-evenly align-items-center border-bottom">
       <div>
@@ -15,12 +15,12 @@
         <div class="text-secondary">
           <small>© 2022 Tesa Football Club.</small>
         </div>
-        <div class="d-flex">
+        <div class="d-flex justify-content-evenly">
           <a href="https://instagram.com/tesa.fc?igshid=YmMyMTA2M2Y=" alt="" class=""><i class="fa-brands fa-instagram"></i></a>
-          <a href="" alt="" class=""><i class="fa-brands fa-facebook"></i></a>
-          <a href="" alt="" class=""><i class="fa-brands fa-twitter"></i></a>
-          <a href="" alt="" class=""><i class="fa-brands fa-youtube"></i></a>
-          <a href="" alt="" class=""><i class="fa-brands fa-flickr"></i></a>
+          <a href="" alt="" class="fs-4"><i class="fa-brands fa-facebook"></i></a>
+          <a href="" alt="" class="fs-4"><i class="fa-brands fa-twitter"></i></a>
+          <a href="" alt="" class="fs-4"><i class="fa-brands fa-youtube"></i></a>
+          <a href="" alt="" class="fs-4"><i class="fa-brands fa-flickr"></i></a>
         </div>
       </div>
     </div>
