--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,15 +12,15 @@
   <div class="bg-light py-5">
     <div class="container-sm">
       <div class="d-flex flex-column justify-content-md-center align-items-md-center">
-        <div class="text-secondary">
+        <div class="text-secondary pb-2">
           <small>© 2022 Tesa Football Club.</small>
         </div>
-        <div class="d-flex justify-content-evenly">
-          <a href="https://instagram.com/tesa.fc?igshid=YmMyMTA2M2Y=" alt="" class=""><i class="fa-brands fa-instagram"></i></a>
-          <a href="" alt="" class="fs-4"><i class="fa-brands fa-facebook"></i></a>
-          <a href="" alt="" class="fs-4"><i class="fa-brands fa-twitter"></i></a>
-          <a href="" alt="" class="fs-4"><i class="fa-brands fa-youtube"></i></a>
-          <a href="" alt="" class="fs-4"><i class="fa-brands fa-flickr"></i></a>
+        <div class="d-flex">
+          <a href="https://instagram.com/tesa.fc?igshid=YmMyMTA2M2Y=" alt="" class="fs-4 link-secondary pe-2"><i class="fa-brands fa-instagram"></i></a>
+          <a href="" alt="" class="fs-4 link-secondary pe-2"><i class="fa-brands fa-facebook"></i></a>
+          <a href="" alt="" class="fs-4 link-secondary pe-2"><i class="fa-brands fa-twitter"></i></a>
+          <a href="" alt="" class="fs-4 link-secondary pe-2"><i class="fa-brands fa-youtube"></i></a>
+          <a href="" alt="" class="fs-4 link-secondary pe-2"><i class="fa-brands fa-flickr"></i></a>
         </div>
       </div>
     </div>
