--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,18 +9,18 @@
       </div>
     </div>
   </div>
-  <div class="bg-light py-5">
+  <div class="bg-light pt-5">
     <div class="container-sm">
       <div class="d-flex flex-column justify-content-md-center align-items-md-center">
         <div class="text-secondary pb-2">
-          <small>© 2022 Tesa Football Club.</small>
+          <small>© 2022 TESA Football Club.</small>
         </div>
         <div class="d-flex">
-          <a href="https://instagram.com/tesa.fc?igshid=YmMyMTA2M2Y=" alt="" class="fs-4 link-secondary pe-2"><i class="fa-brands fa-instagram"></i></a>
-          <a href="" alt="" class="fs-4 link-secondary pe-2"><i class="fa-brands fa-facebook"></i></a>
-          <a href="" alt="" class="fs-4 link-secondary pe-2"><i class="fa-brands fa-twitter"></i></a>
-          <a href="" alt="" class="fs-4 link-secondary pe-2"><i class="fa-brands fa-youtube"></i></a>
-          <a href="" alt="" class="fs-4 link-secondary pe-2"><i class="fa-brands fa-flickr"></i></a>
+          <a href="https://instagram.com/tesa.fc?igshid=YmMyMTA2M2Y=" alt="" class="fs-4 link-secondary pe-3"><i class="fa-brands fa-instagram"></i></a>
+          <a href="https://www.facebook.com/tesafootballclub/" alt="" class="fs-4 link-secondary pe-3"><i class="fa-brands fa-facebook"></i></a>
+          <a href="" alt="" class="fs-4 link-secondary pe-3"><i class="fa-brands fa-twitter"></i></a>
+          <a href="https://youtube.com/channel/UCIp790AQCWjY_wjIZj68m3w" alt="" class="fs-4 link-secondary pe-3"><i class="fa-brands fa-youtube"></i></a>
+          <a href="https://www.flickr.com/people/195320778@N08/" alt="" class="fs-4 link-secondary pe-3"><i class="fa-brands fa-flickr"></i></a>
         </div>
       </div>
     </div>
