--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,14 +9,14 @@
       </div>
     </div>
   </div>
-  <div class="py-5">
+  <div class="pt-5">
     <div class="container-sm">
       <nav class="nav justify-content-center">
-        <a href="{{ '/about' | relative_url }}" alt="" class="nav link-secondary">About</a>
-        <a href="" alt="" class="nav link-secondary">Contact</a>
-        <a href="" alt="" class="nav link-secondary">Assets</a>
-        <a href="" alt="" class="nav link-secondary">Partner</a>
-        <a href="" alt="" class="nav link-secondary">FAQ</a>
+        <a href="{{ '/about' | relative_url }}" alt="" class="nav-item nav link-secondary">About</a>
+        <a href="" alt="" class="nav-item nav link-secondary">Contact</a>
+        <a href="" alt="" class="nav-item nav link-secondary">Assets</a>
+        <a href="" alt="" class="nav-item nav link-secondary">Partner</a>
+        <a href="" alt="" class="nav-item nav link-secondary">FAQ</a>
       </nav>
     </div>
   </div>
