--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,12 +11,12 @@
   </div>
   <div class="pt-5">
     <div class="container-sm">
-      <nav class="nav justify-content-center">
-        <a href="{{ '/about' | relative_url }}" alt="" class="nav-item nav link-secondary">About</a>
-        <a href="" alt="" class="nav-item nav link-secondary">Contact</a>
-        <a href="" alt="" class="nav-item nav link-secondary">Assets</a>
-        <a href="" alt="" class="nav-item nav link-secondary">Partner</a>
-        <a href="" alt="" class="nav-item nav link-secondary">FAQ</a>
+      <nav class="nav justify-content-evenly">
+        <a href="{{ '/about' | relative_url }}" alt="" class="nav-item nav link-secondary text-decoration-none fw-bolder">About</a>
+        <a href="" alt="" class="nav-item nav link-secondary text-decoration-none fw-bolder">Contact</a>
+        <a href="" alt="" class="nav-item nav link-secondary text-decoration-none fw-bolder">Assets</a>
+        <a href="" alt="" class="nav-item nav link-secondary text-decoration-none fw-bolder">Partner</a>
+        <a href="" alt="" class="nav-item nav link-secondary text-decoration-none fw-bolder">FAQ</a>
       </nav>
     </div>
   </div>
