--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="bg-light py-5">
   <h6 class="text-uppercase text-center fw-bolder mb-0">partner</h6>
   <div class="container-sm">
-    <div class="d-flex justify-content-evenly align-items-center border-bottom">
+    <div class="d-flex justify-content-evenly align-items-center border-bottom pb-5">
       <div>
         <img src="{{ '/assets/img/POK.svg' | relative_url }}" alt="" class="border-0" width="100" height="100">
         <img src="{{ '/assets/img/yeni-sembako.svg' | relative_url }}" alt="" class="border-0 px-3" width="100" height="100">
@@ -11,7 +11,7 @@
   </div>
   <div class="pt-5">
     <div class="container-sm">
-      <nav class="nav justify-content-evenly">
+      <nav class="nav justify-content-evenly" style="max-width: 25em;">
         <a href="{{ '/about' | relative_url }}" alt="" class="nav-item nav link-secondary text-decoration-none fw-bolder">About</a>
         <a href="" alt="" class="nav-item nav link-secondary text-decoration-none fw-bolder">Contact</a>
         <a href="" alt="" class="nav-item nav link-secondary text-decoration-none fw-bolder">Assets</a>
