--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,9 +3,9 @@
   <div class="container-sm">
     <div class="d-flex justify-content-evenly align-items-center border-bottom pb-5">
       <div>
-        <img src="{{ '/assets/img/POK.svg' | relative_url }}" alt="" class="border-0 bg-white" width="100" height="100">
-        <img src="{{ '/assets/img/yeni-sembako.svg' | relative_url }}" alt="" class="border-0 bg-white px-3" width="100" height="100">
-        <img src="{{ '/assets/img/redline.svg' | relative_url }}" alt="" class="border-0 bg-white" width="100" height="100">
+        <img src="{{ '/assets/img/POK.svg' | relative_url }}" alt="" class="border-0 bg-white" width="100" height="auto">
+        <img src="{{ '/assets/img/yeni-sembako.svg' | relative_url }}" alt="" class="border-0 bg-white px-3" width="100" height="auto">
+        <img src="{{ '/assets/img/redline.svg' | relative_url }}" alt="" class="border-0 bg-white" width="100" height="auto">
       </div>
     </div>
   </div>
