--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,11 @@
 <footer class="bg-light py-5">
-  <h6 class="text-uppercase text-center fw-bolder mb-0">partner</h6>
+  <h6 class="text-uppercase text-center fw-bolder mb-3">partner</h6>
   <div class="container-sm">
     <div class="d-flex justify-content-evenly align-items-center border-bottom pb-5">
       <div>
-        <img src="{{ '/assets/img/POK.svg' | relative_url }}" alt="" class="border-0 bg-white" width="100" height="auto">
-        <img src="{{ '/assets/img/yeni-sembako.svg' | relative_url }}" alt="" class="border-0 bg-white px-3" width="100" height="auto">
-        <img src="{{ '/assets/img/redline.svg' | relative_url }}" alt="" class="border-0 bg-white" width="100" height="auto">
+        <img src="{{ '/assets/img/POK.svg' | relative_url }}" alt="" class="border-0" width="100" height="auto">
+        <img src="{{ '/assets/img/yeni-sembako.svg' | relative_url }}" alt="" class="border-0 px-3" width="100" height="auto">
+        <img src="{{ '/assets/img/redline.svg' | relative_url }}" alt="" class="border-0" width="100" height="auto">
       </div>
     </div>
   </div>
