--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,7 +22,7 @@
   </div>
   <div class="bg-light pt-5">
     <div class="container-sm">
-      <div class="d-flex flex-column justify-content-md-center align-items-md-center">
+      <div class="d-flex flex-column justify-content-center align-items-center">
         <div class="text-secondary pb-2">
           <small>© 2022 TESA Football Club.</small>
         </div>
