--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,13 +2,13 @@
 layout: default
 ---
 
-<article class="bg-light py-3">
+<article class="bg-light py-5">
   <header class="container-sm border-bottom pb-3">
-    <h1 class="text-capitalize lh-1 mb-1">{{ page.title }}</h1>
-    <h4 class="text-capitalize text-secondary lh-1">{{ page.description }}</h4>
-    <time datetime="{{ page.date | date_to_xmlschema }}"><small class="text-secondary mt-5">{{ page.date | date_to_long_string }}</small></time>
+    <h1 class="text-capitalize mb-1">{{ page.title }}</h1>
+    <h4 class="text-capitalize text-secondary">{{ page.description }}</h4>
+    <time datetime="{{ page.date | date_to_xmlschema }}"><small class="text-secondary pt-5">{{ page.date | date_to_long_string }}</small></time>
   </header>
-  <div class="container-sm mt-3">
+  <div class="container-sm pt-3">
     {{ content }}
   </div>
 </article>
