--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
-<footer class="bg-light py-5">
-  <div class="container-sm border-top border-bottom">
+<footer class="bg-light pb-5">
+  <div class="container-sm border-top border-bottom py-5">
     <h6 class="text-uppercase text-center fw-bolder mb-3">partner</h6>
     <div class="d-flex justify-content-evenly align-items-center">
       <div>
