--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="bg-light pb-5">
-  <div class="container-sm border-top border-bottom py-5">
+  <div class="container-sm border-bottom py-5">
     <h6 class="text-uppercase text-center fw-bolder mb-3">partner</h6>
     <div class="d-flex justify-content-evenly align-items-center">
       <div>
@@ -20,7 +20,7 @@
       </nav>
     </div>
   </div>
-  <div class="bg-light pt-3">
+  <div class="bg-light pt-4">
     <div class="container-sm">
       <div class="d-flex flex-column justify-content-center align-items-center">
         <div class="text-secondary pb-2">
