--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<article class="bg-light py-5">
+<article class="pt-5">
   <header class="container-sm border-bottom pb-3">
     <h1 class="text-capitalize mb-1">{{ page.title }}</h1>
     <h4 class="text-capitalize text-secondary">{{ page.description }}</h4>
