--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -127,7 +127,7 @@ header: header-match
   <div class="container-sm">
     <h1 class="fw-bolder text-uppercase pb-5">Gallery</h1>
     {% if page.gallery.photos %}
-    <h6 class="fw-bolder text-uppercase pb-1">Photo</h6>
+    <h6 class="fw-bolder text-uppercase mb-3">Photo</h6>
     <div class="row row-cols-1 row-cols-md-3 g-3">
       {% for photo in page.gallery.photos %}
       <div class="col">
