--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div class="pt-5">
+<div class="py-5">
   <header class="container-sm pb-3">
     <h1>{{ page.title }}</h1>
   </header>
