--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,10 +13,10 @@
     <div class="container-sm">
       <nav class="nav justify-content-evenly mx-auto" style="max-width: 25em;">
         <a href="{{ '/about' | relative_url }}" alt="" class="nav-item nav link-secondary text-decoration-none fw-bolder">About</a>
-        <a href="" alt="" class="nav-item nav link-secondary text-decoration-none fw-bolder">Contact</a>
-        <a href="" alt="" class="nav-item nav link-secondary text-decoration-none fw-bolder">Assets</a>
-        <a href="" alt="" class="nav-item nav link-secondary text-decoration-none fw-bolder">Partner</a>
-        <a href="" alt="" class="nav-item nav link-secondary text-decoration-none fw-bolder">FAQ</a>
+        <a href="{{ '/contact' | relative_url }}" alt="" class="nav-item nav link-secondary text-decoration-none fw-bolder">Contact</a>
+        <a href="{{ '/assets' | relative_url }}" alt="" class="nav-item nav link-secondary text-decoration-none fw-bolder">Assets</a>
+        <a href="{{ '/partner' | relative_url }}" alt="" class="nav-item nav link-secondary text-decoration-none fw-bolder">Partner</a>
+        <a href="{{ '/faq' | relative_url }}" alt="" class="nav-item nav link-secondary text-decoration-none fw-bolder">FAQ</a>
       </nav>
     </div>
   </div>
