--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="py-5">
   <header class="container-sm pb-3">
-    <h1>{{ page.title }}</h1>
+    <h1 class="text-capitalize">{{ page.title }}</h1>
   </header>
   <div class="container-sm">
     {{ content }}
