--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,8 +3,11 @@ layout: default
 ---
 
 <div class="py-5">
-  <header class="container-sm pb-3">
+  <header class="container-sm pb-5">
     <h1 class="text-capitalize">{{ page.title }}</h1>
+    {% if page.description %}
+    <h4 class="text-capitalize text-secondary">{{ page.description }}</h4>
+    {% endif %}
   </header>
   <div class="container-sm">
     {{ content }}
