--- a/_includes/header-match.html
+++ b/_includes/header-match.html
@@ -47,7 +47,7 @@
                 {% if page.result.goal.home %}
                 <ul class="col list-group">
                   {% for goal in page.result.goal.home %}
-                  <li class="list-group-item text-end text-capitalize text-white bg-transparent border-0 pb-0 ps-1 pe-2 lh-1"><small class="d-inline-block text-secondary fw-bolder">{{ goal.time | append: "'" }}</small><small class="d-inline-block fw-bolder px-2">{{ goal.name }}</small><i class="fa-solid fa-futbol text-secondary"></i></li>
+                  <li class="list-group-item text-end text-capitalize text-white bg-transparent border-0 pb-0 ps-1 pe-2 lh-1"><small class="d-inline-block text-secondary">{{ goal.time | append: "'" }}</small><small class="d-inline-block fw-bolder px-2">{{ goal.name }}</small><i class="fa-solid fa-futbol text-secondary"></i></li>
                   {% endfor %}
                 </ul>
                 {% endif %}
