--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -14,7 +14,7 @@ header: header-match
               <h1 class="fw-bolder text-uppercase">lineup</h1>
               <div class="d-flex justify-content-center align-items-start">
                 <div class="d-block text-end">
-                  <img src="{% if page.home.logo %}{{ page.home.logo | relative_url }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="border-0 rounded-circle" width="35" height="35">
+                  <img src="{% if page.home.logo %}{{ page.home.logo | relative_url }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="border-0" width="35" height="35">
                   <span class="d-block text-uppercase fw-bolder"><small>{{ page.home.name }}</small></span>
                 </div>
                 <div>
