--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -21,7 +21,7 @@ header: header-match
                   <span class="d-block mx-auto text-center text-uppercase fw-bolder px-2 pt-1"><small>vs</small></span>
                 </div>
                 <div class="d-block text-start">
-                  <img src="{% if page.away.logo %}{{ page.away.logo | relative_url }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="border-0 rounded-circle" width="35" height="35">
+                  <img src="{% if page.away.logo %}{{ page.away.logo | relative_url }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="border-0" width="35" height="35">
                   <span class="d-block text-uppercase fw-bolder"><small>{{ page.away.name }}</small></span>
                 </div>
               </div>
