--- a/_includes/header-matches.html
+++ b/_includes/header-matches.html
@@ -4,7 +4,7 @@
     <div class="container py-3">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
         <a href="/" class="d-flex align-items-center col-md-3 text-white text-decoration-none fw-bolder text-uppercase">
-          <img src="{{ '/assets/img/logo/logo-2_v2_stroke-black_bg-white.svg' | relative_url }}" alt="" class="border-0 rounded-circle shadow me-2" width="30" height="30">
+          <img src="{{ '/assets/img/logo/logo-2_v4.png' | relative_url }}" alt="" class="border-0 rounded-circle shadow me-2" width="30" height="30">
           {{ site.title }}
         </a>
         <nav class="nav col-12 col-md-auto justify-content-center mb-md-0">
