--- a/_includes/header-matches.html
+++ b/_includes/header-matches.html
@@ -50,14 +50,14 @@
                 {% if match.result.goal.home %}
                 <ul class="col list-group">
                   {% for goal in match.result.goal.home %}
-                  <li class="list-group-item text-end text-capitalize text-white bg-transparent border-0 ps-1 pe-2 pb-0 lh-1"><small class="d-inline-block text-secondary">{{ goal.time }}</small><small class="d-inline-block fw-bolder px-2">{{ goal.name }}</small><i class="fa-solid fa-futbol text-secondary"></i></li>
+                  <li class="list-group-item text-end text-capitalize text-white bg-transparent border-0 ps-1 pe-2 pb-0 lh-1"><small class="d-inline-block text-secondary fw-bolder">{{ goal.time }}</small><small class="d-inline-block fw-bolder px-2">{{ goal.name }}</small><i class="fa-solid fa-futbol text-secondary"></i></li>
                   {% endfor %}
                 </ul>
                 {% endif %}
                 {% if match.result.goal.away %}
                 <ul class="col list-group">
                   {% for goal in match.result.goal.away %}
-                  <li class="list-group-item text-start text-capitalize text-white bg-transparent border-0 ps-2 pe-1 pb-0 lh-1"><i class="fa-solid fa-futbol text-secondary"></i><small class="d-inline-block fw-bolder px-2">{{ goal.name }}</small><small class="d-inline-block text-secondary">{{ goal.time }}</small></li>
+                  <li class="list-group-item text-start text-capitalize text-white bg-transparent border-0 ps-2 pe-1 pb-0 lh-1"><i class="fa-solid fa-futbol text-secondary"></i><small class="d-inline-block fw-bolder px-2">{{ goal.name }}</small><small class="d-inline-block text-secondary fw-bolder">{{ goal.time }}</small></li>
                   {% endfor %}
                 </ul>
                 {% endif %}
