--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -29,7 +29,7 @@
         <div class="d-flex">
           <a href="https://instagram.com/tesa.fc?igshid=YmMyMTA2M2Y=" alt="" class="fs-4 link-secondary"><i class="fa-brands fa-instagram"></i></a>
           <a href="https://www.facebook.com/tesafootballclub/" alt="" class="fs-4 link-secondary px-3"><i class="fa-brands fa-facebook"></i></a>
-          <a href="" alt="" class="fs-4 link-secondary"><i class="fa-brands fa-twitter"></i></a>
+          <a href="https://twitter.com/tesa_fc" alt="" class="fs-4 link-secondary"><i class="fa-brands fa-twitter"></i></a>
           <a href="https://youtube.com/channel/UCIp790AQCWjY_wjIZj68m3w" alt="" class="fs-4 link-secondary px-3"><i class="fa-brands fa-youtube"></i></a>
           <a href="https://www.flickr.com/people/195320778@N08/" alt="" class="fs-4 link-secondary"><i class="fa-brands fa-flickr"></i></a>
         </div>
