--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -31,7 +31,7 @@
           <a href="https://www.facebook.com/tesafootballclub/" alt="" class="fs-4 link-secondary px-3"><i class="fa-brands fa-facebook"></i></a>
           <a href="https://twitter.com/tesa_fc" alt="" class="fs-4 link-secondary"><i class="fa-brands fa-twitter"></i></a>
           <a href="https://youtube.com/channel/UCIp790AQCWjY_wjIZj68m3w" alt="" class="fs-4 link-secondary px-3"><i class="fa-brands fa-youtube"></i></a>
-          <a href="https://tiktok.com/@tesafc" alt="" class="fs-4 link-secondary"><i class="fa-brands fa-tiktok"></i></a>
+          <a href="https://tiktok.com/@tesafc" alt="" class="fs-4 link-secondary pe-3"><i class="fa-brands fa-tiktok"></i></a>
           <a href="https://www.flickr.com/people/195320778@N08/" alt="" class="fs-4 link-secondary"><i class="fa-brands fa-flickr"></i></a>
         </div>
       </div>
