--- a/_includes/header-image.html
+++ b/_includes/header-image.html
@@ -15,7 +15,7 @@
         </nav>
       </div>
     </div>
-    <div class="d-flex justify-content-center align-items-end">
+    <div class="h-100 d-flex justify-content-center align-items-end">
       <h1 class="text-uppercase mb-0 fw-bolder">
         {% if page.title-header %}
           {{ page.title-header }}
