--- a/_includes/header-image.html
+++ b/_includes/header-image.html
@@ -15,12 +15,12 @@
         </nav>
       </div>
     </div>
-    <div class="h-100 d-flex justify-content-center align-items-end">
-      <h1 class="text-uppercase mb-0 fw-bolder">
-        {% if page.title-header %}
-          {{ page.title-header }}
-        {% endif %}
-      </h1>
-    </div>
+  </div>
+  <div class="h-100 d-flex justify-content-center align-items-end">
+    <h1 class="d-block text-uppercase mb-0 fw-bolder">
+      {% if page.title-header %}
+        {{ page.title-header }}
+      {% endif %}
+    </h1>
   </div>
 </header>
