--- a/_includes/header-image.html
+++ b/_includes/header-image.html
@@ -16,11 +16,13 @@
       </div>
     </div>
   </div>
-  <div class="h-100 d-flex justify-content-center align-items-end">
+  <div class="h-100 bg-light">
+  <div class="d-flex justify-content-center align-items-end">
     <h1 class="d-block text-uppercase mb-0 fw-bolder">
       {% if page.title-header %}
         {{ page.title-header }}
       {% endif %}
     </h1>
+  </div>
   </div>
 </header>
