--- a/_includes/header-image.html
+++ b/_includes/header-image.html
@@ -16,7 +16,7 @@
       </div>
     </div>
   </div>
-  <div class="h-100 bg-light">
+  <div class="container h-100 bg-light">
   <div class="d-flex justify-content-center align-items-end">
     <h1 class="d-block text-uppercase mb-0 fw-bolder">
       {% if page.title-header %}
