--- a/_includes/header-image.html
+++ b/_includes/header-image.html
@@ -17,7 +17,7 @@
     </div>
   </div>
   <div class="container h-100 bg-light">
-  <div class="d-flex flex-fill justify-content-center align-items-end">
+  <div class="d-flex justify-content-center align-items-end">
     <h1 class="d-block text-uppercase mb-0 fw-bolder">
       {% if page.title-header %}
         {{ page.title-header }}
