--- a/_includes/header-image.html
+++ b/_includes/header-image.html
@@ -1,4 +1,4 @@
-<header class="text-white bg-dark" style="height: 480px; background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.8)), url('{{ page.image }}'); background-size: cover; background-position: center; background-repeat: no-repeat; width: 100%; height: auto;"> 
+<header class="h-100 text-white bg-dark" style="height: 480px; background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.8)), url('{{ page.image }}'); background-size: cover; background-position: center; background-repeat: no-repeat; width: 100%; height: auto;"> 
   <div>
     <div class="container py-3">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
@@ -16,13 +16,6 @@
       </div>
     </div>
   </div>
-  <div class="container h-100 bg-light">
-  <div class="h-100 d-flex justify-content-center align-items-end">
-    <h1 class="text-uppercase mb-0 fw-bolder">
-      {% if page.title-header %}
-        {{ page.title-header }}
-      {% endif %}
-    </h1>
-  </div>
+  <div class="h-100 bg-light">
   </div>
 </header>
