--- a/_includes/header-image.html
+++ b/_includes/header-image.html
@@ -1,5 +1,5 @@
-<header class="text-white bg-dark" style="max-height: 480px; background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.8)), url('{{ page.image }}'); background-size: cover; background-position: center; background-repeat: no-repeat; width: 100%; height: auto;"> 
-  <div>
+<header class="text-white bg-dark" style="height: 480px; background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.8)), url('{{ page.image }}'); background-size: cover; background-position: center; background-repeat: no-repeat; width: 100%; height: auto;"> 
+  <div class="h-100">
     <div class="container py-3">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
         <a href="/" class="d-flex align-items-center col-md-3 link-light text-decoration-none text-uppercase fw-bolder">
@@ -16,6 +16,6 @@
       </div>
     </div>
   </div>
-  <div class="bg-light">
+  <div class="h-100 bg-light">
   </div>
 </header>
