--- a/_layouts/player.html
+++ b/_layouts/player.html
@@ -3,6 +3,24 @@ layout: default
 header: header-player
 ---
 
+<div class="text-white bg-dark">
+  {% if page.personal-details %}
+  <div class="container-sm">
+    <h6 class="text-uppercase">personal</h6>
+    <table class="table table-dark">
+      <tbody>
+        {% for item in page.personal-details %}
+        <tr>
+          <td>{{ item.name }}</td>
+          <td>{{ item.value }}</td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  </div>
+  {% endif %}
+</div>
+
 <div>
   {{ content }}
 </div>
