--- a/_layouts/player.html
+++ b/_layouts/player.html
@@ -4,21 +4,21 @@ header: header-player
 ---
 
 <div class="text-white bg-dark">
-  {% if page.personal-details %}
   <div class="container-sm">
     <h6 class="text-uppercase">personal</h6>
     <table class="table table-dark">
       <tbody>
-        {% for item in page.personal-details %}
+        {% for item in site.data.players_2022.details %}
+        {% if item.id == page.id %}
         <tr>
           <td>{{ item.name }}</td>
           <td>{{ item.value }}</td>
         </tr>
+        {% endif %}
         {% endfor %}
       </tbody>
     </table>
   </div>
-  {% endif %}
 </div>
 
 <div>
