--- a/_layouts/player.html
+++ b/_layouts/player.html
@@ -5,17 +5,18 @@ header: header-player
 
 <div class="text-white bg-dark">
   <div class="container-sm">
-    <h6 class="text-uppercase">personal</h6>
+    <h6 class="text-uppercase">personal details</h6>
     <table class="table table-dark">
       <tbody>
-        {% for item in site.data.players_2022.details %}
+        {% assign items = site.data.players_2022.details %}
         {% if item.id == page.id %}
+        {% for item in items %}
         <tr>
           <td>{{ item.name }}</td>
           <td>{{ item.value }}</td>
         </tr>
-        {% endif %}
         {% endfor %}
+        {% endif %}
       </tbody>
     </table>
   </div>
