--- a/_layouts/player.html
+++ b/_layouts/player.html
@@ -5,7 +5,7 @@ header: header-player
 
 <div class="text-white bg-dark">
   <div class="container-sm">
-    <h6 class="text-uppercase">personal</h6>
+    <h6 class="text-uppercase">personal details</h6>
     <table class="table table-dark">
       <tbody>
         {% assign items = site.data.players_2022 %}
