--- a/_layouts/player.html
+++ b/_layouts/player.html
@@ -5,18 +5,18 @@ header: header-player
 
 <div class="text-white bg-dark">
   <div class="container-sm">
-    <h6 class="text-uppercase">personal details</h6>
+    <h6 class="text-uppercase">personal</h6>
     <table class="table table-dark">
       <tbody>
         {% assign items = site.data.players_2022 %}
-        {% if items.id == page.id %}
         {% for item in items %}
+        {% if item.id == page.id %}
         <tr>
           <td>{{ item.details.name }}</td>
           <td>{{ item.details.value }}</td>
         </tr>
-        {% endfor %}
         {% endif %}
+        {% endfor %}
       </tbody>
     </table>
   </div>
