--- a/_layouts/player.html
+++ b/_layouts/player.html
@@ -5,11 +5,12 @@ header: header-player
 
 <div class="text-white bg-dark">
   <div class="container-sm">
-    <h6 class="text-uppercase">personal</h6>
+    <h6 class="text-uppercase">personal details</h6>
     <table class="table table-dark">
       <tbody>
         {% assign items = site.data.players_2022 %}
-        {% if items.id == page.id %}
+        {% assign id = page.id %}
+        {% if id == items.id %}
         {% for item in items %}
         <tr>
           <td>{{ item.details.name }}</td>
