--- a/_layouts/player.html
+++ b/_layouts/player.html
@@ -11,8 +11,8 @@ header: header-player
       <tbody>
         {% for item in page.details %}
         <tr>
-          <td>{{ item.details.name }}</td>
-          <td>{{ item.details.value }}</td>
+          <td>{{ item.name }}</td>
+          <td>{{ item.value }}</td>
         </tr>
         {% endfor %}
       </tbody>
