--- a/_layouts/player.html
+++ b/_layouts/player.html
@@ -4,15 +4,15 @@ header: header-player
 ---
 
 {% if page.details %}
-<div class="text-white bg-dark">
+<div class="text-white bg-dark py-5">
   <div class="container-sm">
-    <h6 class="text-uppercase mb-0">details</h6>
+    <h1 class="text-uppercase mb-0 fs-3">details</h1>
     <table class="table table-dark">
       <tbody>
         {% for item in page.details %}
         <tr>
-          <td>{{ item.name }}</td>
-          <td>{{ item.value }}</td>
+          <td class="text-uppercase fw-bolder ps-0">{{ item.name }}</td>
+          <td class="text-capitalize">{{ item.value }}</td>
         </tr>
         {% endfor %}
       </tbody>
