--- a/_layouts/player.html
+++ b/_layouts/player.html
@@ -6,7 +6,7 @@ header: header-player
 {% if page.details %}
 <div class="text-white bg-dark py-5">
   <div class="container-sm">
-    <h1 class="text-uppercase mb-0 fs-3">details</h1>
+    <h1 class="text-uppercase mb-0 fs-3 pb-3">details</h1>
     <table class="table table-dark">
       <tbody>
         {% for item in page.details %}
