--- a/_includes/header-player.html
+++ b/_includes/header-player.html
@@ -28,7 +28,7 @@
           {% endif %}
           <p class="fw-bolder text-uppercase lh-1" style="font-size: 2em;">{{ page.title }}</p>
           {% if page.social %}
-          <div class="d-flex">
+          <div class="d-flex justify-content-center justify-content-md-start">
             {% for item in page.social %}
             <a href="{{ item.url }}" alt="{{ item.name }}" class="fs-4 link-primary px-1"><i class="{{ item.icon }}"></i></a>
             {% endfor %}
