--- a/_includes/header-image.html
+++ b/_includes/header-image.html
@@ -15,5 +15,10 @@
         </nav>
       </div>
     </div>
+    {% if page.header-title %}
+    <div class="container h-100 bg-light">
+      <h1 class="fs-1 text-uppercase text-center mb-0">{{}}</h1>
+    </div>
+    {% endif %}
   </div>
 </header>
