--- a/_includes/header-image.html
+++ b/_includes/header-image.html
@@ -15,7 +15,7 @@
         </nav>
       </div>
     </div>
-    {% if page.header-title %}
+    {% if page.title-header %}
     <div class="container h-100 bg-light">
       <h1 class="fs-1 text-uppercase text-center mb-0">{{}}</h1>
     </div>
