--- a/_includes/header-image.html
+++ b/_includes/header-image.html
@@ -17,7 +17,7 @@
     </div>
     {% if page.title-header %}
     <div class="container h-100 bg-light">
-      <h1 class="fs-1 text-uppercase text-center mb-0">{{}}</h1>
+      <h1 class="fs-1 text-uppercase text-center mb-0">{{ page.title-header }}</h1>
     </div>
     {% endif %}
   </div>
