--- a/_includes/header-image.html
+++ b/_includes/header-image.html
@@ -16,8 +16,8 @@
       </div>
     </div>
     {% if page.title-header %}
-    <div class="container h-100 bg-light">
-      <h1 class="fs-1 text-uppercase text-center mb-0">{{ page.title-header }}</h1>
+    <div class="container mh-100 bg-light">
+      <h1 class="fs-1 text-uppercase text-center text-white mb-0">{{ page.title-header }}</h1>
     </div>
     {% endif %}
   </div>
