--- a/_includes/header-image.html
+++ b/_includes/header-image.html
@@ -16,7 +16,7 @@
       </div>
     </div>
     {% if page.title-header %}
-    <div class="container mh-100 bg-light">
+    <div class="container h-100 bg-dark d-flex flex-column justify-content-center">
       <h1 class="fs-1 text-uppercase text-center text-white mb-0">{{ page.title-header }}</h1>
     </div>
     {% endif %}
