--- a/_includes/header-image.html
+++ b/_includes/header-image.html
@@ -1,5 +1,5 @@
 <header class="text-white bg-dark" style="min-height: 480px; background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.8)), url('{{ page.image }}'); background-size: cover; background-position: center; background-repeat: no-repeat; width: 100%; height: auto;"> 
-  <div style="height: auto">
+  <div style="height: 480px">
     <div class="container py-3">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
         <a href="/" class="d-flex align-items-center col-md-3 link-light text-decoration-none text-uppercase fw-bolder">
@@ -16,7 +16,7 @@
       </div>
     </div>
     {% if page.title-header %}
-    <div class="container h-100 bg-dark d-flex flex-column justify-content-end align-items-center">
+    <div class="container h-50 bg-dark d-flex flex-column justify-content-end align-items-center">
       <h1 class="fs-1 text-uppercase text-light mb-0">{{ page.title-header }}</h1>
     </div>
     {% endif %}
