--- a/_includes/header-image.html
+++ b/_includes/header-image.html
@@ -16,7 +16,7 @@
       </div>
     </div>
     {% if page.title-header or page.show-title-on-header %}
-    <div class="container h-75 bg-dark d-flex flex-column justify-content-end align-items-center pb-3">
+    <div class="container h-75 d-flex flex-column justify-content-end align-items-center pb-3">
       <h1 class="fs-1 text-uppercase text-light mb-0">{{ page.title-header }}</h1>
     </div>
     {% endif %}
