--- a/_includes/header-image.html
+++ b/_includes/header-image.html
@@ -17,7 +17,7 @@
     </div>
     {% if page.display-title-on-header %}
     <div class="container h-75 d-flex flex-column justify-content-end align-items-center pb-3">
-      <h1 class="fs-1 text-uppercase text-light mb-0">{{ page.title }}</h1>
+      <h1 class="fs-1 text-uppercase text-white fw-bolder mb-0">{{ page.title }}</h1>
     </div>
     {% endif %}
   </div>
