--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="py-5">
-  <header class="container-sm pb-5">
+  <header class="container-sm">
     {% unless page.display-title-on-header %}
     <h1 class="text-capitalize">{{ page.title }}</h1>
     {% endunless %}
