--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div class="py-3">
+<div class="pt-3 pb-5">
   <header class="container-sm">
     {% unless page.display-title-on-header %}
     <h1 class="text-capitalize">{{ page.title }}</h1>
