--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,9 +3,9 @@ layout: default
 ---
 
 <div class="pt-5 pb-5">
-  <header class="container-sm">
+  <header class="container-sm pb-3">
     {% unless page.display-title-on-header %}
-    <h1 class="text-capitalize">{{ page.title }}</h1>
+    <h1 class="text-capitalize mb-0">{{ page.title }}</h1>
     {% endunless %}
     {% if page.description %}
     <h4 class="text-capitalize text-secondary">{{ page.description }}</h4>
