--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -8,7 +8,7 @@ layout: default
     <h1 class="text-capitalize mb-0">{{ page.title }}</h1>
     {% endunless %}
     {% if page.description %}
-    <h4 class="text-capitalize text-secondary">{{ page.description }}</h4>
+    <h3 class="text-capitalize text-secondary mb-0">{{ page.description }}</h3>
     {% endif %}
   </header>
   <div class="container-sm">
