--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,16 +5,16 @@ layout: default
 <article class="py-5">
   <header class="container-sm border-bottom pb-3">
     <h1 class="text-capitalize mb-1">{{ page.title }}</h1>
-    <h4 class="text-capitalize text-secondary">{{ page.description }}</h4>
+    <h3 class="text-capitalize text-secondary">{{ page.description }}</h3>
     <time datetime="{{ page.date | date_to_xmlschema }}"><small class="text-secondary pt-5">{{ page.date | date_to_long_string }}</small></time>
   </header>
-  <div class="container-sm pt-3">
+  <div class="container-sm py-3 border-bottom">
     {{ content }}
   </div>
 </article>
 
 {% if page.comments %}
-<div class="container">
+<div class="container-sm">
   <div id="disqus_thread"></div>
   <script>
     /**
