--- a/_includes/header-match.html
+++ b/_includes/header-match.html
@@ -1,5 +1,5 @@
 <header class="text-white bg-dark" style="height: 760px; background-image: linear-gradient(to bottom right, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.5)), url('{{ page.image }}'); background-size: cover; background-position: center; background-repeat: no-repeat;">
-  <div class="h-100">
+  <div class="h-25">
     <div class="container py-3">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
         <a href="/" class="d-flex align-items-center col-md-3 text-white text-decoration-none fw-bolder text-uppercase">
@@ -15,18 +15,18 @@
         </nav>
       </div>
     </div>
-    <div class="container-sm h-100 d-flex flex-column justify-content-center text-center pb-5">
+    <div class="container-sm h-75 d-flex flex-column justify-content-center text-center pb-5">
       <div class="row row-cols-1">
         <div class="col">
           <div class="card text-white bg-transparent border-0">
             <div class="card-body py-2">
-              <h1 class="text-uppercase fw-bolder pb-3">{{ page.result.status }}</h1>
+              <h1 class="text-uppercase fw-bolder pb-3 mb-0">{{ page.result.status }}</h1>
               <p class="text-uppercase fw-bolder mb-0"><small>{{ page.type }} • {{ page.competition }}</small></p>
-              <p class="text-uppercase fw-bolder"><small>{{ page.kickoff }}</small></p>
+              <p class="text-uppercase fw-bolder mb-0"><small>{{ page.kickoff }}</small></p>
               <div class="row row-cols-3 text-center py-3">
                 <div class="col">
                   <img src="{% if page.home.logo %}{{ page.home.logo | relative_url }}{% else %}{{ '/assets/img/logo/logo-blank.svg' }}{% endif %}" alt="" class="d-block mx-auto border-0" width="75" height="75">
-                  <span class="fw-bold text-uppercase lh-1 pt-2">
+                  <span class="fw-bolder text-uppercase lh-1 pt-3">
                     {{ page.home.name }}
                   </span>
                 </div>
@@ -37,7 +37,7 @@
                 {% endif %}
                 <div class="col">
                   <img src="{% if page.away.logo %}{{ page.away.logo | relative_url }}{% else %}{{ '/assets/img/logo/logo-blank.svg' }}{% endif %}" alt="" class="d-block mx-auto border-0" width="75" height="75">
-                  <span class="fw-bold text-uppercase lh-1 pt-2">
+                  <span class="fw-bold text-uppercase lh-1 pt-3">
                     {{ page.away.name }}
                   </span>
                 </div>
@@ -60,7 +60,7 @@
                 {% endif %}
               </div>
               {% endif %}
-              <p class="card-text text-capitalize fw-bolder text-secondary pt-3"><i class="fa-solid fa-location-dot pe-2"></i>{{ page.place }}</p>
+              <p class="card-text text-capitalize fw-bolder text-secondary pt-3 mb-0"><i class="fa-solid fa-location-dot pe-2"></i>{{ page.place }}</p>
             </div>
           </div>
         </div>
