--- a/_includes/header-matches.html
+++ b/_includes/header-matches.html
@@ -1,6 +1,6 @@
 
 <header class="text-white bg-dark" style="height: 760px; background-image: linear-gradient(to bottom right, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.5)), url('{{ page.image }}'); background-size: cover; background-position: center; background-repeat: no-repeat;">
-  <div class="h-100">
+  <div class="h-25">
     <div class="container py-3">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
         <a href="/" class="d-flex align-items-center col-md-3 text-white text-decoration-none fw-bolder text-uppercase">
@@ -17,19 +17,19 @@
       </div>
     </div>
     {% assign matches = site.matches | sort: "order" | reverse %}
-    <div class="container-sm h-100 d-flex flex-column justify-content-center text-center pb-5">
+    <div class="container-sm h-75 d-flex flex-column justify-content-center text-center pb-5">
       <div class="row row-cols-1">
         {% for match in matches limit:1 %}
         <div class="col">
           <div class="card bg-transparent text-white border-0">
-            <div class="card-body">
-              <h1 class="text-uppercase fw-bolder pb-3">{{ match.status }}</h1>
+            <div class="card-body py-2">
+              <h1 class="text-uppercase fw-bolder pb-3 mb-0">{{ match.status }}</h1>
               <p class="card-text fw-bolder mb-0"><small class="text-uppercase">{{ match.type }}</small> • <small class="text-uppercase">{{ match.competition }}</small></p>
-              <p class="card-text fw-bolder"><small class="text-uppercase">{{ match.kickoff }}</small></p>
-              <div class="row row-cols-3 text-center py-2">
+              <p class="card-text fw-bolder mb-0"><small class="text-uppercase">{{ match.kickoff }}</small></p>
+              <div class="row row-cols-3 text-center py-3">
                 <div class="col">
                   <img src="{% if match.home.logo %}{{ match.home.logo | relative_url }}{% else %}{{ '/assets/img/logo/logo-blank.svg | relative_url' }}{% endif %}" alt="" class="d-block mx-auto border-0" width="75" height="75">
-                  <span class="fw-bold text-uppercase lh-1 pt-2">
+                  <span class="fw-bold text-uppercase lh-1 pt-3">
                     {{ match.home.name }}
                   </span>
                 </div>
@@ -40,13 +40,13 @@
                 {% endif %}
                 <div class="col">
                   <img src="{% if match.away.logo %}{{ match.away.logo | relative_url }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="d-block mx-auto border-0" width="75" height="75">
-                  <span class="fw-bold text-uppercase lh-1 pt-2">
+                  <span class="fw-bold text-uppercase lh-1 pt-3">
                     {{ match.away.name }}
                   </span>
                 </div>
               </div>
               {% if match.result.goal %}
-              <div class="row row-cols-2 g-0">
+              <div class="row row-cols-2 g-0 px-0">
                 {% if match.result.goal.home %}
                 <ul class="col list-group">
                   {% for goal in match.result.goal.home %}
@@ -63,7 +63,7 @@
                 {% endif %}
               </div>
               {% endif %}
-              <p class="card-text text-capitalize text-secondary fw-bolder pt-3"><i class="fa-solid fa-location-dot text-secondary pe-2"></i>{{ match.place }}</p>
+              <p class="card-text text-capitalize text-secondary fw-bolder mb-0 pt-3"><i class="fa-solid fa-location-dot text-secondary pe-2"></i>{{ match.place }}</p>
             </div> 
           </div>
         </div>
