--- a/_includes/header-matches.html
+++ b/_includes/header-matches.html
@@ -1,7 +1,7 @@
 
 <header class="text-white bg-dark" style="height: 760px; background-image: linear-gradient(to bottom right, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.5)), url('{{ page.image }}'); background-size: cover; background-position: center; background-repeat: no-repeat;">
   <div class="h-100">
-    <div class="container h-25 py-3">
+    <div class="container h-auto py-3">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
         <a href="/" class="d-flex align-items-center col-md-3 text-white text-decoration-none fw-bolder text-uppercase">
           <img src="{{ '/assets/img/logo/logo-1_v4.png' | relative_url }}" alt="" class="border-0 rounded-circle shadow me-2" width="30" height="30">
@@ -17,7 +17,7 @@
       </div>
     </div>
     {% assign matches = site.matches | sort: "order" | reverse %}
-    <div class="container-sm h-75 d-flex flex-column justify-content-center text-center pb-5">
+    <div class="container-sm h-100 d-flex flex-column justify-content-center text-center pb-5">
       <div class="row row-cols-1">
         {% for match in matches limit:1 %}
         <div class="col">
