--- a/_layouts/player.html
+++ b/_layouts/player.html
@@ -21,13 +21,13 @@ header: header-player
         </table>
       </div>
     </div>
-    {% assign player = site.data.players_2022.stats-"{{ page.id }}" %}
+    {% assign player = site.data.players_2022 %}
     {% assign stats-id = site.data.players_2022.id %}
     {% assign player-id = page.id %}
     {% if player %}
     <div>
       <div class="row row-cols-2 row-cols-md-3 g-3">
-        {% for stat in player %}
+        {% for stat in player.stats-tsa001 %}
         <div class="col card rounded-0">
           <div class="card-body">
             <p class="fs-4 text-uppercase text-center mb-0">{{ stat.name }}</p>
